# BitFun

./: AGENTS-CN.md  AGENTS.md  CONTRIBUTING.md  Cargo.toml
docs/architecture/: agent-runtime-services-design.md  core-decomposition.md  i18n.md  process-sandbox.md
docs/development/: i18n.md
docs/plans/: core-decomposition-completed.md  core-decomposition-plan.md
scripts/: check-core-boundaries.mjs  i18n-audit.mjs  i18n-contract.test.mjs  i18n-governance-baseline.json  i18n-l10n-identical-allowlist.json
src/apps/cli/src/ui/: agent_selector.rs  command_menu.rs  command_palette.rs  mcp_selector.rs  model_selector.rs  provider_selector.rs  (+4 more)
src/apps/desktop/src/: lib.rs
src/crates/agent-runtime/: AGENTS.md  Cargo.toml
src/crates/agent-runtime/src/: lib.rs  scheduler.rs
src/crates/agent-runtime/tests/: scheduler_contracts.rs
src/crates/core/: AGENTS-CN.md  AGENTS.md  Cargo.toml
src/crates/runtime-ports/: Cargo.toml
src/crates/runtime-ports/src/: lib.rs
src/crates/runtime-services/src/: test_support.rs
src/crates/runtime-services/tests/: runtime_services_contracts.rs
src/crates/sandbox/: AGENTS.md  Cargo.toml
src/crates/sandbox/src/: common.rs  debug_tmp.rs  guard.rs  lib.rs  manager.rs  policy.rs  shell_parser.rs
src/crates/sandbox/src/platform/: linux.rs  macos.rs  mod.rs  seatbelt_base_policy.sbpl  seatbelt_network_policy.sbpl  windows.rs
src/crates/services-integrations/: AGENTS.md
src/crates/services-integrations/src/: remote_connect.rs
src/mobile-web/src/pages/: ChatPage.tsx
src/web-ui/src/: main.tsx
src/web-ui/src/app/: App.tsx
(+57 files in other folders)
