[package]
name = "bitfun-sandbox"
version.workspace = true
edition.workspace = true
description = "OS-level sandbox for BitFun CLI tool execution"

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
log.workspace = true
regex.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_SystemInformation",
    "Win32_System_Console",
] }
dunce = "1"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
which = "7"

[target.'cfg(target_os = "macos")'.dependencies]
regex-lite = "0.1"
